k8s/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: delivery-scheduler
spec:
  selector:
    app: delivery-scheduler
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
