k8s/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: delivery-scheduler
spec:
  to:
    kind: Service
    name: delivery-scheduler
  port:
    targetPort: http
  tls:
    termination: edge
